--- a/Main/backend/package.json
+++ b/Main/backend/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.9.21",
+    "nodemon": "^2.0.4",
     "react-datepicker": "^3.1.3",
     "react-router-dom": "^5.2.0"
   }
