--- a/Main/package.json
+++ b/Main/package.json
@@ -7,13 +7,15 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
+    "bcryptjs": "^2.4.3",
     "bootstrap": "^4.5.0",
     "date-fns": "^2.15.0",
+    "jsonwebtoken": "^8.5.1",
     "react": "^16.13.1",
     "react-datepicker": "^3.1.3",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^3.4.3",
     "react-survey": "^1.7.0",
     "survey-react": "^1.7.25"
   },
