--- a/Main/package.json
+++ b/Main/package.json
@@ -10,6 +10,7 @@
     "bcryptjs": "^2.4.3",
     "bootstrap": "^4.5.0",
     "date-fns": "^2.15.0",
+    "jquery": "^3.5.1",
     "jsonwebtoken": "^8.5.1",
     "react": "^16.13.1",
     "react-datepicker": "^3.1.3",
@@ -18,7 +19,9 @@
     "react-scripts": "^3.4.3",
     "react-survey": "^1.7.0",
     "rsuite": "^4.8.2",
-    "survey-react": "^1.7.25"
+    "survey-creator": "^1.8.8",
+    "survey-react": "^1.7.25",
+    "surveyjs-widgets": "^1.8.8"
   },
   "scripts": {
     "start": "react-scripts start",
