update create distribution

--- a/Main/package.json
+++ b/Main/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.3",
+    "react-select-search": "^2.2.1",
     "react-survey": "^1.7.0",
     "rsuite": "^4.8.2",
     "survey-creator": "^1.8.8",
