--- a/Main/package.json
+++ b/Main/package.json
@@ -8,17 +8,20 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
     "bcryptjs": "^2.4.3",
-    "bootstrap": "^4.5.0",
+    "bootstrap": "^4.5.3",
     "date-fns": "^2.15.0",
     "jquery": "^3.5.1",
     "jsonwebtoken": "^8.5.1",
     "react": "^16.13.1",
+    "react-bootstrap": "^1.4.0",
+    "react-bootstrap-typeahead": "^5.1.4",
     "react-datepicker": "^3.1.3",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.3",
     "react-select-search": "^2.2.1",
     "react-survey": "^1.7.0",
+    "react-switch": "^5.0.1",
     "rsuite": "^4.8.2",
     "survey-creator": "^1.8.8",
     "survey-react": "^1.7.25",
